Nginx-Ingress/ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx
  namespace: ingress-nginx
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: ingress-nginx
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 32080  # Porta exposta no cluster Kind
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
      nodePort: 32443  # Porta exposta no cluster Kind
