Nginx-Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giropops-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: giropops.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: giropops-senhas-giropops-senhas-port
                port:
                  number: 5000
    - host: ""  # Permite acesso via IP
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: giropops-senhas-giropops-senhas-port
                port:
                  number: 5000
